1998-11-12  Tanaka Akira  <akr@jaist.ac.jp>

        * mime-view.el: (mime-display-text/x-vcard): Fix multibyteness
	problem.

1998-11-07  Tanaka Akira  <akr@jaist.ac.jp>

        * mime-view.el: (mime-display-text/x-vcard): Preserve encoding.

1998-11-07  Tanaka Akira  <akr@jaist.ac.jp>

        * mime-view.el: (mime-display-text/x-vcard): New function.
        (mime-preview-condition): Set up for 'mime-preview-text/x-vcard.

1999-01-15  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-view.el: Must require `emu'.

1999-01-04  OKUNISHI Fujikazu <fuji0924@mbox.kyoto-inet.or.jp>

	* mime-view.el (mime-view-insert-entity-button): Use URL if it
	exists in Content-Type field.

	* mime-play.el (mime-raw-browse-url-function): Default to
	`mime-browse-url-function' instead of `mime-browse-url'.

1998-12-24  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mime-view.el (mime-preview-move-to-next): Don't move forward at
	the end of buffer.

1998-12-03  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mime-edit.el (mime-edit-user-agent-value): Include
	`xemacs-betaname'.


1998-12-02  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* SEMI: Version 1.12.0 (Nishi-Kanazawa) released.

1998-11-30  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-edit.el (eliminate-top-spaces): New function (moved from
	mime-def.el of FLIM).

1998-11-17  Kazuhiro Ohta     <ohta@ele.cst.nihon-u.ac.jp>

	* mime-partial.el
	(mime-combine-message/partial-pieces-automatically): Fix
	DOC-string.

	* mime-view.el (mime-view-buffer): Fix DOC-string.

1998-11-25  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* NEWS (Changes in SEMI 1.11): New section.

1998-11-18  Katsumi Yamaoka   <yamaoka@jpl.org>

	* semi-setup.el (mime-setup-decode-message-header): Use
	`mime-decode-header-in-buffer' instead of `eword-decode-header'.

	* mime-view.el (mime-preview-follow-current-entity): Likewise.

1998-11-18  Keiichi Suzuki    <kei-suzu@mail.wbs.ne.jp>

	* mime-edit.el (mime-content-transfer-encoding-priority-list): New
	variable.